Change to correct a color in dark mode in DropDown

--- a/components/DropDown/DropDown.module.scss
+++ b/components/DropDown/DropDown.module.scss
@@ -79,8 +79,11 @@
 
     p {
       color: $colorBlack;
+    }
 
-      .DropDown--Dark & {
+    .DropDown--Dark & {
+      p,
+      a {
         color: $colorPrimary;
       }
     }
